* Add the last of content. All should be done now. * Renamed files to correct name, and fixed file structure.

--- a/P1_requirements.html
+++ b/P1_requirements.html
@@ -82,7 +82,7 @@ Thursday, 21st of September, 2017
 <ul>
   <li><p>The home page, or in other words, the front page, should take a maximum of 1 second to load. This shall be done by moving several of the images over to a specific subpage called “pictures”, and by that moving them away from the front, reducing the load time.</p></li>
   <li><p>The page should have a navigation bar either at the front or on the side of the page. The navigation bar should contain a link to all subpages. This will give the site a more professional look, and make it easier to use. All subpages should be accessible in maximum two clicks, using the navigation bar.</p></li>
-  <li><p>The page website should have a dark, clean and modern look, at last not white or very bright. Images from a concert are often dark and the images will look worse if the background colour of the pages are bright compared to them. The colour will also help appeal to the fans, as they consist of young adults.</p></li>
+  <li><p>The page website should have a dark, clean and modern look, at least not white or very bright. Images from a concert are often dark and the images will look worse if the background colour of the pages are bright compared to them. The colour will also help appeal to the fans, as they consist of young adults.</p></li>
 <li><p>The picture page should contain at least 5-10 pictures and the front page should have a photo of the band/group.
 </p></li></ul>
 </section>
