--- a/P2_design.html
+++ b/P2_design.html
@@ -48,20 +48,42 @@
       The “contact us” page, “home” page and the footer of all pages will also link to facebook and YouTube. This makes social media accessible wherever the user is, and this is very important for a band that wants to be known and recognized. Below is a storyboard of the website's structure.
     </p>
     <figure>
-      <img src="sitemap.JPG" alt="Image of a sitemap of the website">
+      <img src="images/sitemap.JPG" alt="Image of a sitemap of the website">
       <figcaption>Figure 3.1: Sitemap of our website</figcaption>
     </figure>
   </section>
 
   <section>
     <h2>4. Page Layout and Appearance</h2>
+    <p>
+      The website features a dark gray (#1c1c1c) background with a content div with a lighter gray (#1f1f1f) background. The content div has a drop shadow at zero distance and a width of 50rem. All of the text styling decisions are listed in Table 1. Links are white if nothing else is specified, and the drop shadow color is black.  Figure 4.1 shows the universal mockup of the site.
+    </p>
+    <p>
+      The logo of Excellence features a pentagon dimensioned to fit the size of the text it features in and the color is a dark shade of magenta (#512836).
+    </p>
+    <p>
+      The navigation bar is fixed to the top with a dark gray (#141414) background and a height of 90px. The width is the entire screen. To the left there is Excellences logo, and to the right is the navigation menu featuring three dropdown menus. The buttons are, in all caps-lock,  ‘Home’, ‘About’, ‘Concerts’, ‘Media’ and ‘Contact’.  ‘About’ contains a submenu containing ‘About Excellence’, ‘FAQ’ and ‘Discography’. ‘Media’ contains a submenu containing ‘Pictures’ and ‘Video’. ‘Contact’ contains a submenu containing ‘Contact Us’ and ‘Guestbook’. The drop down menus are marked with a white downward triangle after the button text.
+    </p>
+    <p>
+      The footer is anchored at the bottom of the page and contains the logo of the band, a small sitemap and social media icons. It features a dark gray (#141414)  background and a height of 300px. The width is the entire screen. The band’s logo is positioned to the leftmost part of the footer. The rightmost part of the footer contains social media links for Facebook and Youtube, which are 50x50px round buttons. The sitemap covers the area between the logo and the social media buttons and consists of several columns separated into sections as in the navigation bar. The text in the sitemap is centered.
+    </p>
+    <p>
+      By having the navbar fixed at the top, the site is easily navigable from anywhere on the site. By creating a navbar we fulfill the specific requirement of having one and that it contains a link to all subpages, also that every subpage is accessible in at most two clicks. If the footer is also in view, the site map there allows you to find any content with only one click. By implementing a dark color scheme and clear, simple text, we fulfill the specific requirement that it should have a dark, clean and modern look, which also appeals to our audience who are met with colors that fit the typical dark concert pictures.
+    </p>
+
+    <h3>Modularity</h3>
+    <p>
+      In order to facilitate a universal design across the entire website, a standard structure is imposed on the articles. The content section of the page is a replaceable component which will be swapped out upon navigation. It is defined as a column with margins on the left and right side. This allows all the pages to use the same background, navigation bar and footer. The home page is an exception to this rule, which does not follow the form of a column with margins.
+    </p>
+
     <figure>
-      <img src="mockups/Universal%20Site%20-%20Mockup.jpg" alt="Image of a sitemap of the website">
-      <figcaption>Figure 3.1: Sitemap of our website</figcaption>
+      <img src="images/mockups/Universal%20Site%20-%20Mockup.jpg" alt="Image of a sitemap of the website">
+      <figcaption>Figure 4.1: Mockup of the universal design.</figcaption>
     </figure>
 
     <p>
-      <table>
+      <table align="center">
+    <caption>Table 1: Overview of text styles across the website.</caption>
    <tr>
       <th>Where</th>
       <th>What</th>
@@ -69,6 +91,13 @@
       <th>Size (px)</th>
       <th>Color (#)</th>
    </tr>
+    <tr>
+      <td>Universal</td>
+      <td>Title<br> Body text</td>
+      <td>Open Sans Bold<br> Open Sans Light</td>
+      <td>72<br> 28</td>
+      <td>8d3c58<br> FFFFFF</td>
+    </tr>
    <tr>
       <td>Navbar</td>
       <td>Logo<br> Menu</td>
@@ -82,13 +111,6 @@
       <td>Ubuntu Bold<br> Open Sans Bold<br> Open Sans Semibold</td>
       <td>100<br> 24<br> 21</td>
       <td>cbcbcb<br> FFFFFF<br> FFFFFF</td>
-   </tr>
-   <tr>
-      <td>Universal</td>
-      <td>Title<br> Body text</td>
-      <td>Open Sans Bold<br> Open Sans Light</td>
-      <td>72<br> 28</td>
-      <td>8d3c58<br> FFFFFF</td>
    </tr>
    <tr>
       <td>Front page</td>
@@ -154,20 +176,15 @@
       <td>eff4b6<br> 8d3c58<br> eff4b6<br> eff4b6</td>
    </tr>
 </table>
-    <h3>Modularity</h3>
-    <p>
-      In order to facilitate a universal design across the entire website, a standard structure is imposed on the articles. The content section of the page is a replaceable component which will be swapped out upon navigation. It is defined as a column with margins on the left and right side. This allows all the pages to use the same background, navigation bar and footer. The home page is an exception to this rule, which does not follow the form of a column with margins.
-    </p>
-
   </section>
 
   <section>
     <h2>5. Content</h2>
-
+    Our website will contain 9 pages.
     <section>
-      <h3>5.1 Home</h3>
+      <h3>5.1 Home - <i>home.html</i></h3>
       <figure>
-        <img src="mockups/Frontpage%20with%20clear%20navbar%20-%20Mockup.jpg" alt="Mockup design of the Home page.">
+        <img src="images/mockups/Frontpage%20with%20clear%20navbar%20-%20Mockup.jpg" alt="Mockup design of the Home page.">
         <figcaption>Figure 5.1: Mockup of the Home page.</figcaption>
       </figure>
       <p>
@@ -179,9 +196,9 @@
     </section>
 
     <section>
-      <h3>5.2 About Excellence</h3>
+      <h3>5.2 About Excellence - <i>about.html</i></h3>
       <figure>
-        <img src="mockups/About%20Excellence%20-%20Mockup.jpg" alt="Mockup design of the About Excellence page.">
+        <img src="images/mockups/About%20Excellence%20-%20Mockup.jpg" alt="Mockup design of the About Excellence page.">
         <figcaption>Figure 5.2: Mockup of the About Excellence page.</figcaption>
       </figure>
       <p>
@@ -193,20 +210,23 @@
     </section>
 
     <section>
-      <h3>5.3 FAQ</h3>
+      <h3>5.3 FAQ - <i>faq.html</i></h3>
       <figure>
-        <img src="mockups/FAQ%20-%20Mockup.jpg" alt="Mockup design of the FAQ page.">
+        <img src="images/mockups/FAQ%20-%20Mockup.jpg" alt="Mockup design of the FAQ page.">
         <figcaption>Figure 5.3: Mockup of the FAQ page.</figcaption>
       </figure>
       <p>
-
+        The page with FAQs will include some questions the band gets asked frequently, and have a header titled “FAQ”. The questions will be listed as paragraphs with a smaller header. Everything will be placed to the left at the center of the site.
+      </p>
+      <p>
+        This page helps to fulfill the purpose of the site because it gives information to the visitor that they probably are wondering about. We have included the FAQs because usually people are asking about the same things. When the visitor find answer to something they wanted to ask they will be happy and maybe get more interested in the band.
       </p>
     </section>
 
     <section>
-      <h3>5.4 Discography</h3>
+      <h3>5.4 Discography - <i>discography.html</i></h3>
       <figure>
-        <img src="mockups/Discography%20-%20Mockup.jpg" alt="Mockup design of the Discography page.">
+        <img src="images/mockups/Discography%20-%20Mockup.jpg" alt="Mockup design of the Discography page.">
         <figcaption>Figure 5.4: Mockup of the Discography page.</figcaption>
       </figure>
       <p>
@@ -218,9 +238,9 @@
     </section>
 
     <section>
-      <h3>5.5 Tour Dates</h3>
+      <h3>5.5 Tour Dates - <i>tourdates.html</i></h3>
       <figure>
-        <img src="mockups/Tour%20Dates%20-%20Mockup.jpg" alt="Mockup design of the Tour Dates page.">
+        <img src="images/mockups/Tour%20Dates%20-%20Mockup.jpg" alt="Mockup design of the Tour Dates page.">
         <figcaption>Figure 5.5: Mockup of the Tour Dates page.</figcaption>
       </figure>
       <p>
@@ -232,9 +252,9 @@
     </section>
 
     <section>
-      <h3>5.6 Pictures</h3>
+      <h3>5.6 Pictures - <i>pictures.html</i></h3>
       <figure>
-        <img src="mockups/Pictures%20-%20Mockup.jpg" alt="Mockup design of the Pictures page.">
+        <img src="images/mockups/Pictures%20-%20Mockup.jpg" alt="Mockup design of the Pictures page.">
         <figcaption>Figure 5.6: Mockup of the Pictures page.</figcaption>
       </figure>
 
@@ -250,9 +270,9 @@
     </section>
 
     <section>
-      <h3>5.7 Video</h3>
+      <h3>5.7 Video - <i>video.html</i></h3>
       <figure>
-        <img src="mockups/Video%20-%20Mockup.jpg" alt="Mockup design of the Video page.">
+        <img src="images/mockups/Video%20-%20Mockup.jpg" alt="Mockup design of the Video page.">
         <figcaption>Figure 5.7: Mockup of the Video page.</figcaption>
       </figure>
       <p>
@@ -267,9 +287,9 @@
     </section>
 
     <section>
-      <h3>5.8 Contact Us</h3>
+      <h3>5.8 Contact Us - <i>contactus.html</i></h3>
       <figure>
-        <img src="mockups/Contact%20us%20-%20Mockup.jpg"
+        <img src="images/mockups/Contact%20us%20-%20Mockup.jpg"
              alt="Mockup design of Contact Us page.">
         <figcaption>Figure 5.8: Mockup of the Contact Us page.</figcaption>
       </figure>
@@ -285,9 +305,9 @@
     </section>
 
     <section>
-      <h3>5.9 Guestbook</h3>
+      <h3>5.9 Guestbook - <i>guestbook.html</i></h3>
       <figure>
-        <img src="mockups/Guestbook%20-%20Mockup.jpg" alt="Mockup design of the Guestbook page.">
+        <img src="images/mockups/Guestbook%20-%20Mockup.jpg" alt="Mockup design of the Guestbook page.">
         <figcaption>Figure 5.9: Mockup of the Guestbook page.</figcaption>
       </figure>
       <p>
@@ -301,37 +321,57 @@
 
   <section>
     <h2>6. Minimum Requirements for JavaScript</h2>
+    We plan to fulfill the minimum requirements for JavaScript by implementing the following:
+
+    <ol>
+      <li>
+        <p>
+        An implementation of a guestbook, utilizing JavaScript to handle button clicks and the contents of text boxes. As an extended goal, it may use an in-browser database to locally store comments submitted by the user.
+      </p>
+      </li>
+      <li>
+      <p>
+        Discography page will generate album elements from JavaScript to keep the HTML document DRY. It will pull information on the album art, titles and songs which will be available on the JavaScript side. DOM elements will be inserted into the viewable document.
+      </p>
+      </li>
+      <li>
+      <p>
+        The navigation bar will switch pages by issuing XMLHttpRequests and swapping the current page’s content with the next page. In addition to this, given enough time, transitions may be applied to make it look more aesthetically pleasing (as the page will otherwise blink over to the other page upon swapping).
+      </p>
+      </li>
+      <li>
+      <p>
+        On homepage, the concert image will fade in from being invisible, giving the user a soft introduction to the image. This can be done using a mix of CSS and JavaScript, where the image starts with 0 opacity, and upon page load the JavaScript will add a CSS class which triggers a transition to full opacity.
+      </p>
+      </li>
+      <li>
+      <p>
+        <i>(Outside minimum requirements)</i>
+        In the navigation bar, dropdown menus will be used to hide most links to the subpages. The dropdown menus will be revealed upon clicking the menu items. An extended goal will be to apply an expanding animation to make it more visually pleasing.
+      </p>
+      </li>
+    </ol>
     <p>
-      An implementation of a guestbook, utilizing JavaScript to handle button clicks and the contents of text boxes. As an extended goal, it may use an in-browser database to locally store comments submitted by the user.
-    </p>
-    <p>
-      Discography page will generate album elements from JavaScript to keep the HTML document DRY. It will pull information on the album art, titles and songs which will be available on the JavaScript side. DOM elements will be inserted into the viewable document.
-    </p>
-    <p>
-      The navigation bar will switch pages by issuing XMLHttpRequests and swapping the current page’s content with the next page. In addition to this, given enough time, transitions may be applied to make it look more aesthetically pleasing (as the page will otherwise blink over to the other page upon swapping).
-    </p>
-    <p>
-      On homepage, the concert image will fade in from being invisible, giving the user a soft introduction to the image. This can be done using a mix of CSS and JavaScript, where the image starts with 0 opacity, and upon page load the JavaScript will add a CSS class which triggers a transition to full opacity.
-    </p>
-    <p>
-      <i>(Outside minimum requirements)</i>
-      In the navigation bar, dropdown menus will be used to hide most links to the subpages. The dropdown menus will be revealed upon clicking the menu items. An extended goal will be to apply an expanding animation to make it more visually pleasing.
+      Håkon will be in charge of implementing no. 1 and no. 3, Sigrid no. 2, Caroline no. 4 and Kristoffer no. 5.
     </p>
   </section>
 
   <section>
     <h2>7. Plan</h2>
-
-    <table>
+    <p>
+      Table 2 shows the way we will organize and name our files for the project, and includes deadlines for each part, who the task is
+      assigned for and descriptions.
+    </p>
+    <table align="center">
+      <caption>Table 2: Planning and deadlines for website</caption>
    <tr>
-      <th>Directories/filenames</th>
-      <th></th>
+      <th colspan="2">Directories /filenames</th>
       <th>Deadline</th>
       <th>Assigned person</th>
       <th>Description</th>
    </tr>
    <tr>
-      <td>/</td>
+      <td></td>
       <td></td>
       <td>9.11.17</td>
       <td></td>
@@ -532,7 +572,8 @@
 </main>
 
 <footer>
-  by Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme
+  by Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme <br>
+  October 2017
 </footer>
 
 </body>
