Edited Plan section to reflect advisors tips.

--- a/P2_design_our_own.html
+++ b/P2_design_our_own.html
@@ -358,186 +358,211 @@
 
   <section>
     <h2>7. Plan</h2>
-    <h3>7.1 Folders and file structure</h3>
-
-    <ul>
-      <li>index.html</li>
-      <li>articles/
-        <ul>
-          <li>home.html</li>
-          <li>about.html</li>
-          <li>faq.html</li>
-          <li>discography.html</li>
-          <li>tourdates.html</li>
-          <li>pictures.html</li>
-          <li>video.html</li>
-          <li>contactus.html</li>
-          <li>guestbook.html</li>
-        </ul>
-      </li>
-      <li>styles/
-      <ul>
-        <li>main.css</li>
-        <li>home.css</li>
-      </ul>
-      </li>
-      <li>images/
-      <ul>
-        <li>albumart/
-          <ul>
-            <li>album_1.png</li>
-            <li>album_2.png</li>
-            <li>album_3.png</li>
-          </ul>
-        </li>
-        <li>members/
-          <ul>
-            <li>member_1.png</li>
-            <li>member_2.pn</li>
-            <li>member_3.pn</li>
-          </ul>
-        </li>
-        <li>pictures/
-          <ul>
-            <li>picture_1.png</li>
-            <li>picture_2.png</li>
-            <li>picture_3.png</li>
-            <li>picture_4.png</li>
-            <li>picture_5.png</li>
-          </ul>
-        </li>
-      </ul>
-      </li>
-      <li>videos/
-      <ul>
-        <li>video_1.mp4</li>
-        <li>video_2.mp4</li>
-        <li>video_3.mp4</li>
-      </ul>
-      </li>
-      <li>scripts/
-      <ul>
-        <li>guestbook.js</li>
-        <li>splash_image.js</li>
-        <li>document_loader.js</li>
-        <li>discography.js</li>
-        <li>dropdown.js</li>
-      </ul>
-      </li>
-    </ul>
-
-    <h3>7.2 Work division and deadlines</h3>
     <p>
-      Table 2 shows files that must be made, deadlines, who the task is
-      assigned for, and a short description for each of the files.
+      Table 2 shows the way we will organize and name our files for the project, and includes deadlines for each part, who the task is
+      assigned for and descriptions.
     </p>
     <table align="center">
       <caption>Table 2: Planning and deadlines for website</caption>
    <tr>
-      <th>File</th>
+      <th colspan="2">Directories /filenames</th>
       <th>Deadline</th>
       <th>Assigned person</th>
       <th>Description</th>
    </tr>
    <tr>
+      <td></td>
+      <td></td>
+      <td>9.11.17</td>
+      <td></td>
+      <td>General deadline</td>
+   </tr>
+   <tr>
       <td>index.html</td>
-      <td>07.11.17</td>
-      <td>All</td>
+      <td></td>
+      <td>7.11.17</td>
+      <td></td>
       <td>Contains navigation bar, background, content container and footer</td>
    </tr>
    <tr>
-      <td>home.html</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Kristoffer, Sigrid</td>
+      <td>Navigation bar. Kristoffer has main responsibility.</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Håvard</td>
+      <td>Content</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Caroline</td>
+      <td>Footer</td>
+   </tr>
+   <tr>
+      <td>articles/</td>
+      <td></td>
       <td>17.10.17</td>
+      <td></td>
+      <td>Will contain the pages that may be navigated to</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>home.html</td>
+      <td></td>
       <td>Sigrid</td>
       <td>Home page with big image and text</td>
    </tr>
    <tr>
+      <td></td>
       <td>about.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Håvard</td>
       <td>About Excellence page</td>
    </tr>
    <tr>
+      <td></td>
       <td>faq.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Kristoffer</td>
       <td>FAQ page</td>
    </tr>
    <tr>
+      <td></td>
       <td>discography.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Sigrid</td>
       <td>Discography page</td>
    </tr>
    <tr>
+      <td></td>
       <td>tourdates.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Sigrid</td>
       <td>Page with tour dates </td>
    </tr>
    <tr>
+      <td></td>
       <td>pictures.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Caroline</td>
       <td>Pictures page</td>
    </tr>
    <tr>
+      <td></td>
       <td>video.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Kristoffer</td>
       <td>Videos page</td>
    </tr>
    <tr>
+      <td></td>
       <td>contactus.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Caroline</td>
       <td>Contact Us page</td>
    </tr>
    <tr>
+      <td></td>
       <td>guestbook.html</td>
-      <td>17.10.17</td>
+      <td></td>
       <td>Håvard</td>
       <td>Guestbook page</td>
    </tr>
    <tr>
-      <td>main.css</td>
-      <td>07.11.17</td>
+      <td>style.css</td>
+      <td></td>
+      <td>7.11.17</td>
       <td>All</td>
-      <td>Styles for the universal styling of the page</td>
+      <td>Stylesheet</td>
    </tr>
    <tr>
-      <td>home.css</td>
-      <td>07.11.17</td>
-      <td>All</td>
-      <td>Unique styles for front page</td>
+      <td></td>
+      <td></td>
+      <td>10.10.17</td>
+      <td></td>
+      <td>General styling of fonts</td>
    </tr>
    <tr>
-      <td>guestbook.js</td>
+      <td>images/</td>
+      <td></td>
+      <td>10.10.17</td>
+      <td>Caroline</td>
+      <td>Categorizes images</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>albumart/</td>
+      <td></td>
+      <td></td>
+      <td>Will contain images for "Discography"</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>members/</td>
+      <td></td>
+      <td></td>
+      <td>Will contain images for "About Excellence"</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>pictures/</td>
+      <td></td>
+      <td></td>
+      <td>Will contain images for "Pictures"</td>
+   </tr>
+   <tr>
+      <td>videos/</td>
+      <td></td>
+      <td>10.10.17</td>
+      <td>Kristoffer</td>
+      <td>Will contain videos for "Video"</td>
+   </tr>
+   <tr>
+      <td>js/</td>
+      <td></td>
       <td>30.10.17</td>
+      <td></td>
+      <td>Will contain all JavaScript files</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>guestbook.js</td>
+      <td></td>
       <td>Håvard</td>
       <td>Functionality for guestbook.</td>
    </tr>
    <tr>
+      <td></td>
       <td>splash_image.js</td>
-      <td>30.10.17</td>
+      <td></td>
       <td>Caroline</td>
       <td>Transition effect on front-page image.</td>
    </tr>
    <tr>
+      <td></td>
       <td>document_loader.js</td>
       <td>17.10.17</td>
       <td>Håvard</td>
       <td>Issues XMLHttpRequests (works on NTNU servers)</td>
    </tr>
    <tr>
+      <td></td>
       <td>discography.js</td>
-      <td>30.10.17</td>
+      <td></td>
       <td>Sigrid</td>
       <td>Generate HTML element for album and put styles on it.</td>
    </tr>
    <tr>
+      <td></td>
       <td>dropdown.js</td>
-      <td>30.10.17</td>
+      <td></td>
       <td>Kristoffer</td>
       <td>Functionality for dropdown in navbar</td>
    </tr>
