--- a/P2_design.html
+++ b/P2_design.html
@@ -393,8 +393,8 @@
         <li>members/
           <ul>
             <li>member_1.png</li>
-            <li>member_2.pn</li>
-            <li>member_3.pn</li>
+            <li>member_2.png</li>
+            <li>member_3.png</li>
           </ul>
         </li>
         <li>pictures/
