Removed videos folder from file structure

--- a/P2_design.html
+++ b/P2_design.html
@@ -276,7 +276,7 @@
         <figcaption>Figure 5.7: Mockup of the Video page.</figcaption>
       </figure>
       <p>
-        The video page contains videos related to the band, such as video from their concerts, practices and behind the scenes.
+        The video page contains videos related to the band, such as video from their concerts, practices and behind the scenes. The videos will be embedded YouTube videos.
       </p>
       <p>
         This page have the same design as the other subpages, with a picture header above the title, and the style of the text and colours matching the rest of the site. Below the title ‘Video’ there are video players beneath each other, which are imported from Excellence YouTube. They are centered at the middle of the page. Below each player is a description of where and when the video was recorded. Each video player has the same aspect ratio of 16:9, with a max width of 640px and max height of 360px. The video players will have a small drop down shadow.
@@ -406,13 +406,6 @@
             <li>picture_5.png</li>
           </ul>
         </li>
-      </ul>
-      </li>
-      <li>videos/
-      <ul>
-        <li>video_1.mp4</li>
-        <li>video_2.mp4</li>
-        <li>video_3.mp4</li>
       </ul>
       </li>
       <li>scripts/
