- Add proposal for classification of font types

--- a/P2_design.html
+++ b/P2_design.html
@@ -93,49 +93,49 @@
    </tr>
     <tr>
       <td>Universal</td>
-      <td>Title<br> Body text</td>
+      <td>Title (h1)<br> Body text (p)</td>
       <td>Open Sans Bold<br> Open Sans Light</td>
       <td>72<br> 28</td>
       <td>8d3c58<br> FFFFFF</td>
     </tr>
    <tr>
       <td>Navbar</td>
-      <td>Logo<br> Menu</td>
+      <td>Logo (h1, ID logo)<br> Menu (class navLink)</td>
       <td>Ubuntu Bold<br> Open Sans Semibold</td>
       <td>60<br> 36</td>
       <td>cbcbcb<br> FFFFFF</td>
    </tr>
    <tr>
       <td>Footer</td>
-      <td>Logo<br> Category header<br> Sitemap links</td>
+      <td>Logo (ID footer-logo)<br> Category header (footer > h2)<br> Sitemap links(footer > span)</td>
       <td>Ubuntu Bold<br> Open Sans Bold<br> Open Sans Semibold</td>
       <td>100<br> 24<br> 21</td>
       <td>cbcbcb<br> FFFFFF<br> FFFFFF</td>
    </tr>
    <tr>
       <td>Front page</td>
-      <td>Bulletin text<br> Smaller text</td>
+      <td>Bulletin text (strong)<br> Smaller text (p)</td>
       <td>Ubuntu Bold<br> Ubuntu Bold</td>
       <td>160<br> 36</td>
       <td>FFFFFF<br> FFFFFF</td>
    </tr>
    <tr>
       <td>About Excellence</td>
-      <td>Subheader: Members<br> Names</td>
+      <td>Subheader: Members (h2)<br> Names (strong)</td>
       <td>Open Sans Bold<br> Open Sans Bold</td>
       <td>36<br> 27</td>
       <td>eff4b6<br> eff4b6</td>
    </tr>
    <tr>
       <td>FAQ</td>
-      <td>Questions</td>
+      <td>Questions (h2)</td>
       <td>Open Sans Bold</td>
       <td>30</td>
       <td>eff4b6</td>
    </tr>
    <tr>
       <td>Discography</td>
-      <td>Subheader: Album title<br> Album content</td>
+      <td>Subheader: Album title (h2)<br> Album content (strong)</td>
       <td>Open Sans Bold<br> Open Sans Semibold</td>
       <td>36<br> 30</td>
       <td>eff4b6<br> FFFFFF</td>
@@ -149,28 +149,28 @@
    </tr>
    <tr>
       <td>Video</td>
-      <td>Caption</td>
+      <td>Caption (strong)</td>
       <td>Open Sans Semibold</td>
       <td>30</td>
       <td>dcdcdc</td>
    </tr>
    <tr>
       <td>Tour Dates</td>
-      <td>Next concert<br> Tour name<br> Concerts<br> Date/Location</td>
+      <td>Next concert (h2)<br> Tour name (h3)<br> Concerts (h2)<br> Date/Location (strong)</td>
       <td>Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold</td>
       <td>35<br> 40<br> 36<br> 30</td>
       <td>eff4b6<br> 8d3c58<br> eff4b6<br> dcdcdc</td>
    </tr>
    <tr>
       <td>Contact Us</td>
-      <td>E-mail, Social media<br> Gmail-address</td>
+      <td>E-mail, Social media (h2)<br> Gmail-address (address)</td>
       <td>Open Sans Bold<br> Open Sans Bold</td>
       <td>30<br> 30</td>
       <td>eff4b6<br> FFFFFF</td>
    </tr>
    <tr>
       <td>Guestbook</td>
-      <td>Name, Message<br> Submit<br> Subheader: What oth..<br> Name of reviewer</td>
+      <td>Name, Message (strong)<br> Submit (button)<br> Subheader: What oth.. (h2)<br> Name of poster (strong)</td>
       <td>Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold</td>
       <td>27<br> 30<br> 36<br> 27</td>
       <td>eff4b6<br> 8d3c58<br> eff4b6<br> eff4b6</td>
@@ -393,8 +393,8 @@
         <li>members/
           <ul>
             <li>member_1.png</li>
-            <li>member_2.pn</li>
-            <li>member_3.pn</li>
+            <li>member_2.png</li>
+            <li>member_3.png</li>
           </ul>
         </li>
         <li>pictures/
@@ -527,7 +527,7 @@
       <td>document_loader.js</td>
       <td>17.10.17</td>
       <td>Håvard</td>
-      <td>Issues XMLHttpRequests (works on NTNU servers)</td>
+      <td>Issues XMLHttpRequests (works on NTNU servers), used to load pages upon navigation</td>
    </tr>
    <tr>
       <td>discography.js</td>
