- Add missing style guideline

--- a/P2_design.html
+++ b/P2_design.html
@@ -142,7 +142,7 @@
    </tr>
    <tr>
       <td>Pictures</td>
-      <td>Caption</td>
+      <td>Caption (strong)</td>
       <td>Open Sans Semibold</td>
       <td>30</td>
       <td>dcdcdc</td>
