- Add minor adjustment to guidelines

--- a/P2_design.html
+++ b/P2_design.html
@@ -100,7 +100,7 @@
     </tr>
    <tr>
       <td>Navbar</td>
-      <td>Logo (h1, ID logo)<br> Menu (class navLink)</td>
+      <td>Logo (navbar > h1, ID logo)<br> Menu (class navLink)</td>
       <td>Ubuntu Bold<br> Open Sans Semibold</td>
       <td>60<br> 36</td>
       <td>cbcbcb<br> FFFFFF</td>
