- Fix W3C validation errors, alignment of items and language

--- a/P2_design.html
+++ b/P2_design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="main.css"/>
@@ -82,7 +82,7 @@
     </figure>
 
     <p>
-      <table align="center">
+      <table>
     <caption>Table 1: Overview of text styles across the website.</caption>
    <tr>
       <th>Where</th>
@@ -424,7 +424,7 @@
       Table 2 shows files that must be made, deadlines, who the task is
       assigned for, and a short description for each of the files.
     </p>
-    <table align="center">
+    <table>
       <caption>Table 2: Planning and deadlines for website</caption>
    <tr>
       <th>File</th>
