- Add use of document_loader.js to common project  - Add the ability to dynamically load stylesheets in document_loader.js

--- a/website/index.html
+++ b/website/index.html
@@ -4,10 +4,24 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles/main.css"/>
 
+  <script src="scripts/guestbook.js" type="text/javascript"></script>
+  <script src="scripts/document_loader.js" type="text/javascript"></script>
+
   <title>Excellence</title>
 </head>
 <body>
 
+  <navbar>
+    <!-- TODO: Navigation bar elements will go here -->
+  </navbar>
+
+  <content>
+    <!-- Content will be inserted dynamically here -->
+  </content>
+  
+  <footer>
+    
+  </footer>
 
 </body>
 </html>
