--- a/website/index.html
+++ b/website/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:700" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700" />
+  
+  <!--<link rel="stylesheet" href="styles/home.css"/>-->
   <link rel="stylesheet" href="styles/main.css"/>
-
+  
   <script src="scripts/guestbook.js" type="text/javascript"></script>
   <script src="scripts/document_loader.js" type="text/javascript"></script>
 
@@ -11,13 +16,15 @@
 </head>
 <body>
 
+  <!--
   <navbar>
-    <!-- TODO: Navigation bar elements will go here -->
+    <!-- TODO: Navigation bar elements will go here 
   </navbar>
+  -->
 
-  <content>
+  <main>
     <!-- Content will be inserted dynamically here -->
-  </content>
+  </main>
   
   <footer>
     
@@ -25,3 +32,4 @@
 
 </body>
 </html>
+
