- Add guestbook styling  - Prevent guestbook from POSTing, use custom Javascript in place of it

--- a/website/index.html
+++ b/website/index.html
@@ -16,11 +16,14 @@
 </head>
 <body>
 
-  <!--
+  
   <navbar>
-    <!-- TODO: Navigation bar elements will go here 
+    <!-- TODO: Navigation bar elements will go here -->
+    <button onclick="quickLoad('home')">Home</button>
+    <button onclick="quickLoad('about')">About</button>
+    
   </navbar>
-  -->
+  
 
   <main>
     <!-- Content will be inserted dynamically here -->
