--- a/website/index.html
+++ b/website/index.html
@@ -5,9 +5,8 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:700" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700" />
-
-  <!--<link rel="stylesheet" href="styles/home.css"/>-->
   <link rel="stylesheet" href="styles/main.css"/>
+
 
   <script src="scripts/guestbook.js" type="text/javascript"></script>
   <script src="scripts/document_loader.js" type="text/javascript"></script>
@@ -37,7 +36,7 @@
   </main>
 
   <footer>
-
+    <!-- TODO: Footer will go here -->
   </footer>
 
 </body>
