--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
 
   <script src="scripts/guestbook.js" type="text/javascript"></script>
   <script src="scripts/document_loader.js" type="text/javascript"></script>
+  <script src="scripts/discography.js" type="text/javascript"></script>
 
   <title>Excellence</title>
 </head>
