Add completed tag to tasks in plan

--- a/design_docs/P2_design_our_own.html
+++ b/design_docs/P2_design_our_own.html
@@ -365,12 +365,14 @@
     <table align="center">
       <caption>Table 2: Planning and deadlines for website</caption>
    <tr>
+      <th>Done</th>
       <th colspan="2">Directories /filenames</th>
       <th>Deadline</th>
       <th>Assigned person</th>
       <th>Description</th>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td></td>
       <td></td>
       <td>9.11.17</td>
@@ -378,6 +380,7 @@
       <td>General deadline</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td>index.html</td>
       <td></td>
       <td>7.11.17</td>
@@ -385,6 +388,7 @@
       <td>Contains navigation bar, background, content container and footer</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td></td>
       <td></td>
       <td></td>
@@ -392,6 +396,7 @@
       <td>Navigation bar. Kristoffer has main responsibility.</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td></td>
       <td></td>
@@ -399,6 +404,7 @@
       <td>Content</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td></td>
       <td></td>
       <td></td>
@@ -406,6 +412,7 @@
       <td>Footer</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td>articles/</td>
       <td></td>
       <td>17.10.17</td>
@@ -413,6 +420,7 @@
       <td>Will contain the pages that may be navigated to</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>home.html</td>
       <td></td>
@@ -420,6 +428,7 @@
       <td>Home page with big image and text</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td></td>
       <td>about.html</td>
       <td></td>
@@ -427,6 +436,7 @@
       <td>About Excellence page</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>faq.html</td>
       <td></td>
@@ -434,6 +444,7 @@
       <td>FAQ page</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>discography.html</td>
       <td></td>
@@ -441,6 +452,7 @@
       <td>Discography page</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>tourdates.html</td>
       <td></td>
@@ -448,6 +460,7 @@
       <td>Page with tour dates </td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td></td>
       <td>pictures.html</td>
       <td></td>
@@ -455,6 +468,7 @@
       <td>Pictures page</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>video.html</td>
       <td></td>
@@ -462,6 +476,7 @@
       <td>Videos page</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td></td>
       <td>contactus.html</td>
       <td></td>
@@ -469,6 +484,7 @@
       <td>Contact Us page</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>guestbook.html</td>
       <td></td>
@@ -476,6 +492,7 @@
       <td>Guestbook page</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td>style.css</td>
       <td></td>
       <td>7.11.17</td>
@@ -483,6 +500,7 @@
       <td>Stylesheet</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox"/></td>
       <td></td>
       <td></td>
       <td>10.10.17</td>
@@ -490,6 +508,7 @@
       <td>General styling of fonts</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td>images/</td>
       <td></td>
       <td>10.10.17</td>
@@ -497,6 +516,7 @@
       <td>Categorizes images</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>albumart/</td>
       <td></td>
@@ -504,6 +524,7 @@
       <td>Will contain images for "Discography"</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>members/</td>
       <td></td>
@@ -511,6 +532,7 @@
       <td>Will contain images for "About Excellence"</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>pictures/</td>
       <td></td>
@@ -518,6 +540,7 @@
       <td>Will contain images for "Pictures"</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td>videos/</td>
       <td></td>
       <td>10.10.17</td>
@@ -525,6 +548,7 @@
       <td>Will contain videos for "Video"</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td>js/</td>
       <td></td>
       <td>30.10.17</td>
@@ -532,6 +556,7 @@
       <td>Will contain all JavaScript files</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>guestbook.js</td>
       <td></td>
@@ -539,6 +564,7 @@
       <td>Functionality for guestbook.</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>splash_image.js</td>
       <td></td>
@@ -546,6 +572,7 @@
       <td>Transition effect on front-page image.</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>document_loader.js</td>
       <td>17.10.17</td>
@@ -553,6 +580,7 @@
       <td>Issues XMLHttpRequests (works on NTNU servers)</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>discography.js</td>
       <td></td>
@@ -560,6 +588,7 @@
       <td>Generate HTML element for album and put styles on it.</td>
    </tr>
    <tr>
+     <td><input id="checkBox" type="checkbox" checked/></td>
       <td></td>
       <td>dropdown.js</td>
       <td></td>
