--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,40 @@
 
   <footer>
     <!-- TODO: Footer will go here -->
+    <div>
+      <img src="images/logo/ExcellenceLogo-small.png">
+    </div>
+    <div>
+      <h2>Home</h2>
+      <button onclick="quickLoad('home')">Home</button>
+    </div>
+    <div>
+      <h2>About</h2>
+      <button onclick="quickLoad('about')">About</button>
+      <button onclick="quickLoad('faq')">FAQ</button>
+      <button onclick="quickLoad('discography')">Discography</button>
+    </div>
+    <div>
+      <h2>Concert</h2>
+      <button onclick="quickLoad('tourdate')">Tour Dates</button>
+    </div>
+    <div>
+      <h2>Media</h2>
+      <button onclick="quickLoad('pictures')">Pictures</button>
+      <button onclick="quickLoad('video')">Videos</button>
+    </div>
+    <div>
+      <h2>Contact</h2>
+      <button onclick="quickLoad('contactus')">Contact Us</button>
+      <button onclick="quickLoad('guestbook')">Guestbook</button>
+    </div>
+    <div>
+      <img class="social-media" src="images/social-media-facebook.png">
+    </div>
+    <div>
+      <img class="social-media" src="images/social-media-youtube.png">
+    </div>
+
   </footer>
 
 </body>
