Changes in footer

--- a/website/index.html
+++ b/website/index.html
@@ -66,11 +66,11 @@
       <button onclick="quickLoad('contactus')">Contact Us</button>
       <button onclick="quickLoad('guestbook')">Guestbook</button>
     </div>
-    <div>
-      <img class="social-media" src="images/social-media-facebook.png">
+    <div class="social-media">
+      <img src="images/facebook.png">
     </div>
-    <div>
-      <img class="social-media" src="images/social-media-youtube.png">
+    <div class="social-media">
+      <img src="images/youtube.png">
     </div>
 
   </footer>
