--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 
 <html lang="en">
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/main.css"/>
   <link rel="stylesheet" href="styles/Navbar.css" >
   <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="styles/video.css">
 
   <script src="scripts/document_loader.js" type="text/javascript"></script>
   <script src="scripts/discography.js" type="text/javascript"></script>
@@ -34,7 +34,7 @@
     <button onclick="quickLoad('video')">Videos</button>
 	-->
 	 <div class="navbar">
-
+        <img id="logo" src="images\logo\ExcellenceLogo-small.png">
         <!--Knapp Contact-->
         <div class="dropdown">
             <button class="dropbtn" onclick="dropdownFunction(3)">CONTACT <i class="fa fa-caret-down" aria-hidden="true"></i></button>
